# invoice-ai

./: README.md
backend/: pyproject.toml  requirements.txt
backend/api/: main.py
backend/config/: config_acc.py  vendor_master.json
backend/core/: csv_writer.py  extract_invoice.py  extractor.py  generate_response.py  journal_builder.py  llm.py
backend/data/: history.json
backend/models/: invoice_model.py  journal_model.py
backend/output_folder/: data.csv  journal_AIN2526001124876.csv
backend/services/: docling_extractor.py  extract_invoice.py  generate_response.py  llm.py  ocr.py  pdf_converter.py  text_extractor.py
frontend/: package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: invoice.js
frontend/src/components/: InvoicePreview.jsx  InvoiceTable.jsx  Sidebar.jsx  StatsCard.jsx  Toast.jsx
frontend/src/pages/: Dashboard.jsx  History.jsx  Upload.jsx
